<resources>
    <string name="app_name">Carbon Tracer</string>
    <string name="welcome_introduction">Global Warming is a challenge that will haunt us probably <b>until this century is over</b>.\nCenturies is also the time politics takes to make notable changes.\nThat is why <b>the first step towards change starts with us.</b>\nTaking that step requires a <b>simple and fast assessment of your carbon footprint</b>.\nSo go ahead and <b>trace your carbons!</b>
</string>
    <string name="tutorial_intro">Carbon Tracer consists of four elements: <b>the chat, camera, Tracer, and a statistics page.</b>\n\n
    <b>1. Chat:</b> Talk to the Tracer AI via text or voice messages.\n
    <b>2. Camera:</b> Photograph objects you want add tot the tracer.\n
    <b>3. Tracer:</b> A list of all Traceables.\n
    <b>4. Statistics:</b> Distribution of your carbon footprint and top emitters.
</string>
    <string name="add_traceable_text">
    Adding new Traceables to the Tracer can be done in 2 ways:\n
    <b>1. Take a photo:</b> You can take a photo of an item in the Camera Tab. The AI will detect it, and you can add info to assess the CO2 emissions.\n
    <b>2. Manually add:</b> You can manually add the traceable by pressing the plus sign at the top of the Tracer.\nTo <b>remove</b> the traceables, select them and press the trash bin icon.
</string>
    <string name="what_is_tracer_text">
    <b>The Tracer</b> is the heart of this app.\nIt is a list of all the objects, activities, etc. that the user added to assess their CO2 emissions.\nThey are referred to as <b>Traceables</b>.
Use the camera in the app to photograph an object you want to add or press the plus sign in the top right corner of the tracer.\nHold on a traceable to select it and click to unselect it.\nThe select mode is used to delete traceables.

As well in the top right corner, is the „more options“ button. Here you can select all traceables, sort them by name, category or emissions, evaluate your footprint, show this help screen and reset your API key.
</string>
    <string name="total_co2_text">&lt;b>%1$s kg&lt;/b></string>
    <string name="how_to_add_traceables"><b>How to add traceables</b></string>
    <string name="field_meaning"><b>Name:</b> this is the name of the object or activity you want to evaluate. You can add additional information here like the fuel usage of a car, if you wanted to evaluate that (e.g. 7L diesel per 100km)\n
<b>Material:</b> Only necessary where it influences the regular carbon footprint (e.g. regular disposed items like water bottles).\n
<b>Category:</b> The category is only used for the statistics. You have Groceries, Consumer Products (which do not fall into groceries, electronics, transport, miscellaneous).\n
<b>Amount:</b> The quantity of the object which can be just a number, but also a mass or something like kilometers for a car.\n
<b>Occurrence:</b> How often is the object used in the defined amount. (e.g. 2 times weekly, 4 daily, monthly etc.)\n
<b>CO2 equivalent yearly:</b> You can enter this yourself or let it be evaluated by Gemini.
</string>
    <string name="fields_meaning_header"><b>Meaning of the fields in the Traceables\n</b></string>
    <string name="how_to_use_carbontracer">How to use CarbonTracer?</string>
    <string name="what_the_tracer_is"><b>What the Tracer is</b></string>
    <string name="welcome_to_carbontracer">Welcome to CarbonTracer!</string>
    <string name="get_started">Get started</string>

    <string-array name="occurence_array">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
        <item>yearly</item>
    </string-array>

</resources>