<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tutorial_background"
        tools:context=".onboardingscreen.OnboardingActivity">


        <TextView
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_carbontracer"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/tutorial_intro"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/what_the_tracer_is"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/what_is_tracer_text"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/how_to_add_traceables"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/add_traceable_text"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/fields_meaning_header"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="serif"
            android:scrollbars="vertical"
            android:text="@string/field_meaning"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/closeButton"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#CBFFFFFF"
            android:text="Understood!"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center"
            />



    </LinearLayout>
</ScrollView>