<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".onboardingscreen.OnboardingActivity">


    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_carbontracer"
        android:textColor="#FDE7E7"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome_introduction"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#CBFFFFFF"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>